Updated Study Cards
Created Database manager which enables interactions between the two databases
Added more settings to the config for controlling the rate of learning for the learning algorithm

--- a/app/config/static_config.yaml
+++ b/app/config/static_config.yaml
@@ -16,5 +16,5 @@ keyboard:
 
 database:
   word_db_path: "database/kanji.db"
-  study_card_db_path: "database/study_card_db.db"
+  study_card_db_path: "database/study_card.db"
   kanjivg_folder: "database/kanjivg/"
