--- a/config.yaml
+++ b/config.yaml
@@ -15,3 +15,14 @@ writing:
   brush_size: 5
   feedback_correct_color: "#00FF00"
   feedback_incorrect_color: "#FF0000"
+
+learning_algorithm:
+  default_ease_factor: 2.5
+  min_ease_factor: 1.3
+  max_interval: 365
+  learning_steps: "[1, 6]"
+  graduation_interval: 10
+  lapse_interval_factor: 0.5
+  quality_threshold: 3
+  new_card_limit: 20
+  card_review_limit: 200
