--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pygame = "^2.6.1"
 pyyaml = "^6.0.2"
 db-sqlite3 = "^0.0.1"
 pandas = "^2.2.3"
+datetime = "^5.5"
+timedelta = "^2020.12.3"
 
 
 [build-system]
